<resources>
    <string name="app_name">The Smart Shopping List</string>
    <string name="create_list_title">Create New List</string>
    <string name="create_category_title">Create New Category</string>
    <string name="create_button">Create</string>
    <string name="close_button">X</string>
    <string name="add_item_hint">Add item</string>
    <string name="toast_enter_name">You need to add a name</string>
    <string name="toast_write_something">You need to write something</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_add_new_category">Add new category</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="deleting_are_you_sure">Are you sure you want to delete</string>
    <string name="categories_title">Categories</string>
    <string name="hint_add_a_name">Add a name</string>
    <string name="color_title">Colors</string>
</resources>
